# qt-webgu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Renderer.cpp  Renderer.hpp  WebGPUWindow.cpp  WebGPUWindow.hpp  index.html  library_webgpu.js  main.cpp
build-wasm/: renderer.js  renderer.wasm
webgpu/: webgpu.cmake
